# Ouroboros

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PRODUCT.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  genome.py
backend/app/services/: sequence_loader.py  viewer_window.py
backend/scripts/: export_api_contract.py
backend/tests/: test_genome_routes.py  test_health.py  test_sequence_routes.py  test_viewer_window_service.py
data/raw/: addgene-plasmid-66061-sequence-119876.gbk
docs/: reference-data.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/__tests__/: viewer-page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/viewer/: page.tsx
frontend/components/viewer/: CircularDnaScroller.test.tsx  CircularDnaScroller.tsx  CircularOverview.tsx  DnaCircularScroller.test.tsx  DnaCircularScroller.tsx  GenomeViewerShell.test.tsx  GenomeViewerShell.tsx  LinearSequenceViewer.tsx  SeqVizLayout.test.ts  SeqVizLayout.test.tsx  SeqVizLayout.tsx  circularMath.test.ts  circularMath.ts  viewer.constants.ts
frontend/features/viewer/: api.test.ts  api.ts
frontend/shared/types/ts/: index.ts
frontend/tests/: home-page.test.tsx  viewer-page.test.tsx
shared/api-contract/: openapi.json
shared/api-contract/schemas/: AnnotationFeature.schema.json  AnnotationListResponse.schema.json  GenomeRegionResponse.schema.json  ViewerWindowResponse.schema.json
